* Readme update (setup tutorial moved to wiki)
Signed-off-by: Francois-Xavier Aeberhard <fx@red-agent.com>